--- a/css/login.css
+++ b/css/login.css
@@ -3,6 +3,40 @@
     justify-content: center;
     background-color: #1A1D53;
 }
+.navigation{
+  background-color: #20867D;
+  width: 20%;
+  text-align: center;
+}
+.navigation :hover{
+    color:#1A1D53;
+    font-size: 25px;
+    transition: 0.5s;
+
+}
+
+
+
+.navigation a{
+    background-color:#20867D;
+    border-radius: 15px;
+    padding: 30px;
+    float: left;
+    margin-top: 10%;
+    margin-right: 20px;
+    margin-left: 12%;
+    text-decoration: none;
+    font-size: 20px;
+    color:white;
+
+}
+
+.iconos{
+    height: 30px; 
+    background-color: #20867D; 
+    align-self:auto; 
+}
+
 .general-container{
     background-color: #20867D;
     padding: 30px;
@@ -32,19 +66,30 @@
     border-bottom-right-radius: 15px;
     border-bottom-left-radius: 15px;
 }
+
 .input-login{
     background-color: rgb(241, 236, 236);
     padding: 10px;
     margin: 10px;
     width: 60%;
-  
 }
+
+.input-login:hover{
+   background-color: #20867d52;
+   transition: 0.5s;
+}
+
 .login-button{
     background-color: #1A1D53;
     border-radius: 8px;
     width: 30%;
     height: 60px;
     padding: 2px;
+}
+
+.login-button:hover{
+    font-size: large;
+    transition: 0.5s;
 }
 
 .google{
@@ -61,4 +106,8 @@
     margin: 5%;
     border-radius: 15px;
     box-shadow: 5px 10px #888888;
+}
+.sign-up button:hover{
+    padding: 5px;
+    transition: 0.5s;
 }
