--- a/css/index.css
+++ b/css/index.css
@@ -11,3 +11,11 @@
     box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.411);
     
 }
+
+
+@media screen and (max-width: 1000px){
+    .EnglishTest{
+        background-color:#20867D;
+        font-size: 25px;
+    }
+}
