--- a/css/login.css
+++ b/css/login.css
@@ -102,6 +102,7 @@
     padding: 10px;
     box-shadow: 5px 10px #888888;
     margin-bottom: 25px;
+    border-radius: 15px;
 }
 .sign-up{
     background-color: white;
