--- a/english-app-vue/src/assets/css/login.css
+++ b/english-app-vue/src/assets/css/login.css
@@ -3,6 +3,7 @@
     background-color: #20867d;
     width: 20%;
     text-align: center;
+    margin-top: 12%;
   }
   .navigation :hover {
     color: #1a1d53;
@@ -37,6 +38,7 @@
     width: 35%;
     margin: auto;
     border-radius: 60px;
+    margin-top: 3%;
   }
   .welcomeBack-container {
     background-color: white;
@@ -87,8 +89,8 @@
     font-family: "Times New Roman", Times, serif;
   }
   
-  .login-button:hover {
-    font-size: large;
+  .login-button :hover {
+    font-size: 35px;
     transition: 0.5s;
   }
   
@@ -99,6 +101,10 @@
     box-shadow: 5px 10px #888888;
     margin-bottom: 25px;
     border-radius: 15px;
+  }
+  .google:hover{
+    font-size: 30px;
+    transition: 0.5s;
   }
   .sign-up {
     background-color: white;
