--- a/english-app-vue/src/assets/css/index.css
+++ b/english-app-vue/src/assets/css/index.css
@@ -1,5 +1,7 @@
 
-
+*{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 .EnglishTest {
     padding: 10px;
     font-size: 50px;
