--- a/english-app-vue/src/assets/css/login.css
+++ b/english-app-vue/src/assets/css/login.css
@@ -1,4 +1,6 @@
-
+*{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
   .navigation {
     background-color: #20867d;
     width: 20%;
