--- a/english-app-vue/src/assets/css/Style.css
+++ b/english-app-vue/src/assets/css/Style.css
@@ -139,10 +139,12 @@ header center p{
 }
 
 #boton{
-    background: linear-gradient(to right, rgb(113, 170, 162),rgb(4, 4, 112) );
-    color: aliceblue;
+    background-color: #494fca;
+    border-radius: 8px;
+    color: white;
+    width: 40%;
     height: 40px;
-    width: 110px;
+    padding: 2px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
